do-account-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  labels:
    app: account-app
spec:
  selector:
    app: account-app
  ports:
    - port: 80
      targetPort: 8090
      protocol: TCP
