do-account-service/account-ingress.yaml

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: account-ingress
  namespace: account
spec:
  rules:
  - host: account.cloudeira.com
    http:
      paths:
      - backend:
          serviceName: account-svc
          servicePort: 80
